# brePodder

./: .gitignore  Dockerfile.appimage  Download.py  Download2.py  README  README.md  TODO  Ui_DialogAdd.py  Ui_add_folder.py  Ui_brePodder2.py  Ui_mainwindow.py  Ui_mainwindow.py~  Ui_mainwindow2.py  Ui_proba.py  audioplayer.py  brePodder.e4p  brePodder.e4p~  brePodder.py  brePodder2.ui  brePodder3.ui  brepodder.spec  build-appimage.sh  build-in-container.sh  dockerignore  download.py  getfavicon.py  images.qrc  images_rc  index.html  main.py  opml.py  player.py  podcasts-good.sqlite  podcasts1.sqlite  podcasts3.sqlite  proba.ui  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py  (+3 more)
brepodder/: app.py  brePodder.py  config.py  config_players.py  logger.py  main.py  resources.py
brepodder/data/: __init__.py  database.py
brepodder/resources/: brepodder.opml
brepodder/services/: __init__.py  feed_parser.py  network_fetcher.py  opml.py
brepodder/ui/: DialogAdd.ui  Ui_DialogAdd.py  Ui_mainwindow.py  __init__.py  brePodder2.ui  brePodder3.ui  brePodder4.ui  main_window.py  mylineeditwidget.py  resources.py  treeviewwidget.py
brepodder/ui/dialogs/: __init__.py  add_dialog.py  folder_dialog.py  settings_dialog.py
brepodder/ui/resources/: resources.qrc
brepodder/ui/widgets/: __init__.py  audio_player.py  line_edit.py  tree_view.py
brepodder/utils/: __init__.py  audioplayer.py  download.py  favicon.py  feed_parser.py  get_favicon.py  getfavicon.py  mediaplayer.py  opml.py  sql.py  threads.py  youtube.py
brepodder/workers/: __init__.py  add_worker.py  download_worker.py  feedparser_worker.py  update_worker.py
tests/: __init__.py  conftest.py  test_config.py  test_database.py  test_favicon.py  test_feed_parser.py  test_opml.py  test_youtube.py
ui/: Ui_mainwindow.py
utils/: audioplayer.py  download.py
