[project]
name = "brepodder"
version = "0.1.0"
description = "A desktop podcast client built with Python and PyQt6"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "favicon>=0.7.0",
    "feedparser>=6.0.0",
    "requests>=2.28.0",
    "PyQt6>=6.6.0",
    "pyqt5>=5.15.11",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.0.0",
    "pytest-mock>=3.12.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
filterwarnings = [
    "ignore::DeprecationWarning",
]

[tool.coverage.run]
source = ["brepodder"]
omit = ["brepodder/ui/*", "brepodder/workers/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
]
