[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "brepodder"
version = "0.1.0"
description = "A desktop podcast client built with Python and PyQt6"
readme = "README.md"
requires-python = ">=3.13"
license = "GPL-3.0-or-later"
license-files = ["LICENSE"]
authors = [
    {name = "homoludens", email = "marko@droopia.net"}
]
keywords = ["podcast", "pyqt6", "rss"]
classifiers = [
    "Programming Language :: Python :: 3.13",
    "Operating System :: OS Independent",
    "Topic :: Multimedia :: Sound/Audio",
]
dependencies = [
    "favicon>=0.7.0",
    "feedparser>=6.0.0",
    "requests>=2.28.0",
    "PyQt6>=6.6.0",
    "pyinstaller>=6.17.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.0.0",
    "pytest-mock>=3.12.0",
    "build>=1.3.0",
]

[project.scripts]
brepodder = "brepodder.main:main"

[project.gui-scripts]
brepodder-gui = "brepodder.main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["brepodder*"]

[tool.setuptools.package-data]
brepodder = ["resources/*",]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
filterwarnings = [
    "ignore::DeprecationWarning",
]

[tool.coverage.run]
source = ["brepodder"]
omit = ["brepodder/ui/*", "brepodder/workers/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
]
